--- a/flutter_practise/pubspec.yaml
+++ b/flutter_practise/pubspec.yaml
@@ -31,12 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  flutter_signin_button: ^2.0.0
+  sizer: ^2.0.15
+
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.0.0
+  flutter_screenutil: ^5.7.0
   provider: ^6.0.5
   shared_preferences: ^2.0.18
   json_annotation:
